# gedit-sc-plugin

./: ChangeLog  Makefile.am  Makefile.in  README  TODO  aclocal.m4  configure  configure.ac  index.html
autom4te.cache/: output.1  requests  traces.0  traces.1
data/: Makefile.am
po/: POTFILES.in  es.po  gedit-sc-plugin.pot
src/: Makefile.am  Makefile.in  csymbols-proposal.c  csymbols-provider.c  csymbols-provider.h  gsc-proposal-csymbol.c  gsc-proposal-csymbol.h  gsc-proposal-symgoto.c  gsc-proposal-symgoto.h  gsc-provider-csymbols.c  gsc-provider-csymbols.h  gsc-trigger-members.c  gsc-trigger-members.h  gsc-trigger-symbols.c  gsc-trigger-symbols.h  sc-ctags.c  sc-ctags.h  sc-language-manager.c  sc-language-manager.h  sc-lm-c.c  sc-lm-c.h  sc-menu.c  sc-menu.h  sc-plugin.c  sc-plugin.h  sc-provider-csymbols-goto.c  sc-provider-csymbols-goto.h  sc-provider-csymbols.c  sc-provider-csymbols.h  sc-provider-project-csymbols.c  sc-provider-project-csymbols.h  sc-symbol.c  sc-symbol.h  sc-symbols-panel.c  sc-symbols-panel.h  sc-utils.c  sc-utils.h  sc.gedit-plugin.desktop.in  sourcecompletion-plugin.c  sourcecompletion-plugin.h
tests/: Makefile.am  regexp_test.py  test-ctags.c
