# Symbol Browser Plugin
scplugindir = $(datadir)/gedit-sc-plugin/pixmaps
scplugin_DATA = \
	gedit-symbol-browser-plugin.png \
	symbol-class.png \
	symbol-constant.png \
	symbol-define.png \
	symbol-enumerator.png \
	symbol-function.png \
	symbol-macro.png \
	symbol-method.png \
	symbol-struct.png \
	symbol-typedef.png \
	symbol-variable.png

EXTRA_DIST = $(scplugin_DATA)

